Web/assets/css/app.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
@import url(http://fonts.googleapis.com/css?family=Oswald:400,700,300);
@import url(http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic);
@import url(http://fonts.googleapis.com/css?family=Shadows+Into+Light);

/* app css stylesheet */
.centered{
  display: block;
  margin: 0 auto;
  text-align: center;
}

.left{
  display: block;
  text-align: left;
}

/* -------------------------------Sidebar-------------------------------------
-------------------------------------------------------------------------------*/
.mobile-container{
  background:  linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 6, 80, 0.17)), url(img/mobile-background.jpg) center center no-repeat;
  background-size: cover;
  color: white;
  height: 90vh;
  padding-top: 50px;
}
.download-icon{
   width: 180px;
  display: block;
  margin-bottom: 150px;
  margin: 50px auto 0 auto;
}

/* -------------------------------Sidebar-------------------------------------
-------------------------------------------------------------------------------*/
.sidebar{
  background: #FFF;
  min-height: 110vh;
  margin-top: -60px;
}
.sidebar header{
  padding-top: 20px;
  text-align: center;
  height: 60px;
  border-bottom: 1px solid #ccc;
}
.sidebar li{
  display: inline-block;
  display: inline-block;
  margin: 20px;
}
.sidebar li .svg{
  width: 30px;
  height: 30px; 
}
.svg path {fill: #747474 !important; width: 30px;}

.symbols{
  height: 480px;
  overflow: auto;
  padding: 20px;
}
/* -------------------------------Main-------------------------------------
-------------------------------------------------------------------------------*/
.navbar-save{
  position: fixed;
  right: 0;
  background: #1BBC9B;
  color: white;
  padding: 15px;
  height: 60px;
  line-height: 30px;
  font-size: 18px;
}

.navbar-save:hover, .navbar-save:focus{
  color: white;
}

#c{
  background: url(img/background_designer.png) repeat;
}

.controls{
  background: #233447;
  color: white;
  z-index: 10;
  width: 100%;
  height: 70px;
  padding-top: 2px;
  margin-bottom: 5px;
  box-shadow: 0px 2px 4px -2px black;
}
.controls .form-group{
  margin: 0;
}
.controls label{
  color: rgb(198, 198, 198);
}
#controls-text{
  display: none;
}

.controls .form-group{
  text-align: center;
}

/* -------------------------------Preview-------------------------------------
-------------------------------------------------------------------------------*/
#preview{
  background: #9B9B9B;
  border-top: 3px solid #2F4357;
}
  .item{
    position: relative;
  }
  #preview .back{
    width: 250px;
    height: 250px;
    margin: 0 auto;
  }
    #preview .back img{
      width: 250px;
    }

  #preview .front{
    height: 250px;
    position: absolute;
    top: 20%;
    left: 18%;
    }
      #preview .front img{
        height: 50%;
        margin: 0 auto;
      }
  
  .slick-prev:before, .slick-next:before {
    color: #2F4357;
  }

/* -------------------------------Spectrum color picker overrides-------------------------------------
-------------------------------------------------------------------------------*/
.sp-preview{
  width: 65px;
  height: 30px
}
.sp-dd {
  padding: 7px 0;
}
.sp-replacer{
  background: transparent;
  border:none;
  color: white;
  float: left;
}
.sp-container{
  border: none;
    border-top: solid 2px #626262;

}
.sp-picker-container{
  background: #233447;
  border:none;
}
.sp-container button, .sp-container button:hover{
  background: #1BBC9B;
  color: white;
}
.sp-cancel, .sp-cancel:hover{
  color:white !important;
}
.sp-input{
  color: white;
}

